@@ -1,5 +1,17 @@
 1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
 
+	* poem-ltn1.el (set-buffer-multibyte): Use `defun-maybe' instead
+	of `defmacro-maybe'.
+
+	* poem-e20_2.el (set-buffer-multibyte): Use `defun-maybe' instead
+	of `defsubst-maybe'.
+
+1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
+
+	* EMU-ELS: New implementation.
+
+1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
+
 	* emu.el, emu-mule.el, EMU-ELS: Move code about CCL from
 	emu-mule.el to pccl-om.el.
 
